<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_spectrogram_palette"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/spectrogram_palette">
        <menu>
            <group
                android:id="@+id/group_spectrogram_palette"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_palette_iron"
                    android:title="@string/spectrogram_palette_iron" />
                <item
                    android:id="@+id/action_palette_lime"
                    android:title="@string/spectrogram_palette_lime" />
                <item
                    android:id="@+id/action_palette_yellow"
                    android:title="@string/spectrogram_palette_yellow" />
                <item
                    android:id="@+id/action_palette_glow"
                    android:title="@string/spectrogram_palette_glow" />
                <item
                    android:id="@+id/action_palette_gray"
                    android:title="@string/spectrogram_palette_gray" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_spectrogram_scale"
        android:orderInCategory="91"
        android:showAsAction="never"
        android:title="@string/spectrogram_scale">
        <menu>
            <group
                android:id="@+id/group_spectrogram_scale"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_scale_lin"
                    android:title="@string/spectrogram_scale_lin" />
                <item
                    android:id="@+id/action_scale_sqrt"
                    android:title="@string/spectrogram_scale_sqrt" />
                <item
                    android:id="@+id/action_scale_log"
                    android:title="@string/spectrogram_scale_log" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_spectrogram_show_background"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/background_show" />

    <item
        android:id="@+id/action_spectrogram_view_map"
        android:enabled="false"
        android:icon="@drawable/menu_set_as"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/spectrogram_view_map" />

</menu>
